style.css
/* Header Section */

header {
    position: relative;
    height: 500px;
    width: 100%;
    background-image: url("assets/img/header_foto.png");
    background-size: cover;
    background-position: center top;
    background-repeat: no-repeat;
}

.yellow-box {
    animation: yellow-box 1s ease-out forwards;
}

.yellow-box-mobile {
    display: none;
}

.yellow-box-wrapper {
    position: absolute;
    top: 0;
    left: 0;
    width: 400px;
    height: auto;
    z-index: 2;
}

.header-text {
    font-family: 'Palanquin';
    font-weight: 500;
    font-size: 1.75rem;
    color: var(--bg-color-text-color);
    line-height: 120%;
    max-width: 300px;
}

.header-text-content {
    max-width: 25%;
    position: absolute;
    left: 8%;
    top: 25%;
    z-index: 3;
}

@keyframes rotating-circle {
    from {
        transform: rotate(0);
    }

    to {
        transform: rotate(360deg);
    }
}

.circle-animation {
    position: relative;
    width: 160px;
    height: 160px;
    top: 60%;
    left: 33%;
    z-index: 10;
}

.circle-text {
    position: absolute;
    width: 160px;
    height: auto;
    animation: rotating-circle 10s infinite linear;
    z-index: 4;
}

.flag-fixed {
    position: absolute;
    width: 50px;
    z-index: 10;
    transform: translate(-50%, -50%);
    top: 50%;
    left: 50%;
}

@keyframes yellow-box {
    0% {
        transform: scaleX(15);
    }

    100% {
        transform: scaleX(1);
    }
}

/* Main Section */

.main_section {
    width: 100%;
    padding: 0px 120px;
    padding-top: 100px;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}

/* Highlights Bereich */
.div_highlights {
    gap: 44px;
    padding-bottom: 48px;

    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding-top: 120px;
}


.slidershow {
    display: flex;
    justify-content: center;
    align-items: center;

    padding-top: 88px;
}

.slider_a {
    position: relative;

    width: 1200px;
    height: 533px;

    display: flex;
    justify-content: center;
    align-items: flex-end;

    overflow: hidden;
}

.slider_a input {
    z-index: 2;
    cursor: pointer;
}

.slider_a_wrapper {
    z-index: 1;

    width: 400%;
    height: 100%;

    position: absolute;
    display: flex;
}

.glass-box {
    position: absolute;
    top: 54px;
    left: 38px;
    width: 881px;
    padding: 16px 24px;
    text-align: left;
    color: white;

    background: rgba(255, 255, 255, 0.1);
    backdrop-filter: blur(8px);
    -webkit-backdrop-filter: blur(8px);

    border-left: 1px solid rgba(255, 255, 255, 0.7);
    border-right: 1px solid rgba(255, 255, 255, 0.7);
}

.glass-box p:nth-child(1) {
    font-family: 'Palanquin Dark';
    color: white;
    font-size: 48px;
    margin: 0 0 8px 0;
    line-height: 1.1;
    font-weight: bold;
}

.glass-box p {
    font-family: 'Palanquin';
    font-weight: 400;
    font-size: 28px;
    line-height: 1.10;
    margin: 0;
}

.slider_a_element {
    width: calc(100% / 4);
    height: 100%;
    position: relative;
}

.element_one {
    background-image: url("./assets/img/Insel.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}


.element_two {
    background-image: url("./assets/img/Venedig.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}


.element_three {
    background-image: url("./assets/img/china.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.element_four {
    background-image: url("./assets/img/japan.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.slider_a input[value="one"]:checked~.slider_a_wrapper {
    transform: translateX(calc(100% * 0.375));
}

.slider_a input[value="two"]:checked~.slider_a_wrapper {
    transform: translateX(calc(100% * 0.125));
}

.slider_a input[value="three"]:checked~.slider_a_wrapper {
    transform: translateX(calc(-100% * 0.125));
}

.slider_a input[value="four"]:checked~.slider_a_wrapper {
    transform: translateX(calc(-100% * 0.375));
}

.slider_a input[type="radio"] {
    appearance: none;
    -webkit-appearance: none;
    width: 28px;
    height: 28px;
    border: 2px solid white;
    border-radius: 50%;
    background-color: white;
    cursor: pointer;
    margin: 44px 12px;
    transition: all 0.3s ease;
}

.slider_a input[type="radio"]:checked {
    background-color: rgba(241, 201, 83, 1);
    border-color: rgba(241, 201, 83, 1);
    width: 40px;
    height: 28px;
    border-radius: 20px;
}

/* FAQ Bereich */
.div_faq,
.div_contact {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding-top: 120px;
}

.div_faq {
    gap: 12px;
    padding-bottom: 48px;
    padding-top: 60px;
}

.div_contact {
    padding-bottom: 126px;
    gap: 58px;
}

.div_contact>img {
    height: 48px;
    width: 48px;
}

.div_details {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    gap: 20px;
    width: 1200px;
}

.details_container {
    border-bottom: 1px solid #eee;
    margin-bottom: 10px;
    background-color: var(--bg-color-yellow);
    border-radius: 12px;
    padding: 5px;
    gap: 8px;
    width: 100%;
}

summary {
    display: flex;
    justify-content: space-between;
    align-items: center;
    list-style: none;
    cursor: pointer;
    padding: 0px 16px 0px 16px;
}


summary::-webkit-details-marker,
summary::marker {
    display: none;
}

summary::after {
    content: '';
    width: 10px;
    height: 10px;
    border-right: 3px solid #555;
    border-bottom: 3px solid #555;
    transform: rotate(45deg);
    transition: transform 0.3s ease-in-out;
    flex-shrink: 0;
}


details[open] summary::after {
    transform: rotate(-135deg);
}
/* ... */

